Changing Between Visualizations

--- a/style.css
+++ b/style.css
@@ -105,8 +105,16 @@ svg {
     line-height: 20px;
 }
 
-.monthText {
-			fill: #00ff00;
-			font-size: 20px;
-
-		}
+/* dots visualization */
+.axis path,
+.axis line
+{
+	fill: none;
+	stroke: black;
+	shape-rendering: crispEdges;
+}
+.axis text
+{
+	font-family: sans-serif;
+	font-size: 11px;
+}
