--- a/style.css
+++ b/style.css
@@ -35,6 +35,13 @@ html .x-container-fluid.width {
   /*height:600px;*/
   width:100%;
 }
+
+#sel_viz
+{
+    height:700px;
+    width:50%;
+    position:relative;
+}
 .x-navbar-fixed-top {
   display:none !important;
 }
@@ -83,8 +90,8 @@ svg {
     height: auto;
     padding: 10px;
     color: #FFFFFF;
-    background: #0E80B3;
-    opacity: 0.6;
+    background: #FFFFFF;/*#0E80B3;*/
+    opacity: 1;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     border-radius: 10px;
@@ -103,6 +110,7 @@ svg {
     font-family: sans-serif;
     font-size: 16px;
     line-height: 20px;
+    color: #000000;
 }
 
 /* dots visualization */
