FIltering + style das comboboxes e line edits

--- a/style.css
+++ b/style.css
@@ -152,6 +152,24 @@ div.tooltip {
 	font-size: 11px;
 }
 
+select {
+	
+   background: url(http://www.webcis.com.br/images/imagens-noticias/select/ico-seta-appearance.gif) no-repeat #eeeeee;  /* Imagem de fundo (Seta) */
+   background-position: 218px center;  /*Posição da imagem do background*/
+   
+   height:30px; /* Altura do select, importante para que tenha a mesma altura em todo os navegadores */
+   border:1px solid #ddd;
+
+}
+
+input {
+	height:30px;
+	border:1px solid #ddd;
+	background: url(http://www.webcis.com.br/images/imagens-noticias/select/ico-seta-appearance.gif) no-repeat #eeeeee;  /* Imagem de fundo (Seta) */
+   background-position: 218px center;  /*Posição da imagem do background*/
+
+}
+
 /* PARARELL COORDINATES */
 
 .background path {
