coord paralelas funcionando + imagens bonitas quando nao ha viz

--- a/style.css
+++ b/style.css
@@ -187,10 +187,11 @@ input:disabled {
 .foreground path {
   fill: none;
   stroke: steelblue;
+  stroke-width: 2px;
 }
 
 .brush .extent {
-  fill-opacity: .3;
+  fill-opacity: 0.3;
   stroke: #fff;
   shape-rendering: crispEdges;
 }
