--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ html .x-container-fluid.width {
   height:20px;*/
 }
 
+/* TEXT */
+
 text {
   font-family: "Lucida Console", Monaco, monospace;/*"Oswald",Helvetica,sans-serif;*/
   font-size: 15px;
@@ -78,6 +80,19 @@ text.isCenter,text[depth="0"][root="0"] {
   /*font-weight:700;*/
 }
 
+body {
+    -webkit-animation-delay: 0.1s;
+    -webkit-animation-name: fontfix;
+    -webkit-animation-duration: 0.1s;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: linear;
+}
+
+@-webkit-keyframes fontfix {
+    from { opacity: 1; }
+    to   { opacity: 1; }
+}
+
 .benefitDetails {
   x:10;
 }
@@ -91,6 +106,8 @@ svg {
   height:730px !important;
   font: 10px sans-serif;
 }
+
+/* TOOLTIP */
 
 #tooltip {
 
@@ -108,7 +125,7 @@ svg {
     -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
-    pointer-events: none;*
+    pointer-events: none;
     }
 
 #tooltip.hidden {
@@ -137,7 +154,8 @@ div.tooltip {
   pointer-events: none;         
 }
 
-/* dots visualization */
+/* DOTS VISUALIZATION */
+
 .axis path,
 .axis line
 {
@@ -151,6 +169,8 @@ div.tooltip {
 	text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
 	font-size: 11px;
 }
+
+/* SELECTION for filtering and comboboxes */
 
 select {
 	
