--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ html .x-container-fluid.width {
 
 #sel_viz
 {
-    height:700px;
+    height:650px;
     width:100%;
     position:relative;
 }
@@ -137,6 +137,7 @@ div.tooltip {
 {
 	fill: none;
 	stroke: black;
+    stroke-width:2px;
 	shape-rendering: crispEdges;
 }
 .axis text
