dando merge com tentativa de polylines

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@ path {
   fill-rule: evenodd;
 }
 
+polyline{
+    opacity: .3;
+    stroke: black;
+    stroke-width: 2px;
+    fill: none;
+}
+
 /* TEXT */
 
 text {
