interface de adicao e edicao de especime

--- a/css/style.css
+++ b/css/style.css
@@ -182,9 +182,18 @@ input {
 
 }
 
+input:focus {
+   border: solid 1px #707070;
+  box-shadow: 0 0 5px 1px #969696;
+}
+
 input:disabled {
 	background:white;
 	border: white;
+}
+
+input[type=number] { 
+    -moz-appearance: textfield;
 }
 
 
