--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,13 @@ select {
 
 }
 
+select:disabled {
+	-moz-appearance: none;
+    -webkit-appearance: none;
+	background:white;
+	border: white;
+}
+
 input {
 	height:30px;
 	border:1px solid #ddd;
@@ -191,6 +198,7 @@ input:disabled {
 	background:white;
 	border: white;
 }
+
 
 input[type=number] { 
     -moz-appearance: textfield;
