--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,19 @@ html .x-container-fluid.width {
     position:relative;
 }
 
+/* MENU */
+
+.characteristics {
+   /*background:url('li1.gif') 50% 50% no-repeat no-repeat;
+   padding-left: 5px;*/
+}
+
+.export {
+   background:url('../images/box-out.png') 0% 50% no-repeat no-repeat;
+   padding-left: 100px;
+   
+}
+
 /* SUNBURST */
 
 path {
