--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,25 @@ html .x-container-fluid.width {
 
 /* MENU */
 
+.navbar-login
+{
+    width: 305px;
+    padding: 10px;
+    padding-bottom: 0px;
+}
+
+.navbar-login-session
+{
+    padding: 10px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.icon-size
+{
+    font-size: 87px;
+}
+
 .characteristics {
    /*background:url('li1.gif') 50% 50% no-repeat no-repeat;
    padding-left: 5px;*/
@@ -69,10 +88,10 @@ text {
 g:hover, g text:hover{
   cursor:pointer;
 }
-
+/*
 text[depth="0"] {
   font-size: 20px !important;
-}
+}*/
 
 text.isCenter,text[depth="0"][root="0"] {
 /*  transform:rotate(0) !important;*/
